<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Strobe Tuner</string>
    <string name="menu_8va">8va</string>
    <string name="menu_8vb">8vb</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_scale">Temperament</string>
    <string name="menu_keyboard">Keyboard Display</string>
    <string name="menu_buy">Buy</string>
    <string name="menu_calibrate">Calibrate</string>
    <string name="menu_un_calibrate">Stop&#xA;Calibration</string>
    <string name="please_upgrade">Please upgrade to Strobe Tuner Plus to access these features</string>
    <string name="upgrade">Upgrade</string>
    <string name="menu_help">Help</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Defaults</string>
    <string name="plus">false</string>
    <string name="autoDetect">Auto Detect</string>
    
    <!-- main screen -->
    <string name="blank"> </string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="a">A</string>
    <string name="b">B</string>
    
    <string name="calibrationFactor">Calibration Factor</string>
    <string name="gt">&gt;</string>
    <string name="gtgt">&gt;&gt;</string>
    <string name="lt">&lt;</string>
    <string name="ltlt">&lt;&lt;</string>
    
    <!-- Preferences screen -->
    <string name="preferences">Preferences</string>
    <string name="a4freq">A4 Frequency</string>
    <string name="hz">Hz</string>
    <string name="maskSize">Mask Aperture Size</string>
    <string name="percentSign">%</string>
    <string name="noiseThreshold">Noise Threshold</string>
    <!--  string name="calibrationFactor">Calibration Factor</string -->
    <string name="saveNote">Save Note</string>
    <string name="saveOctave">Save Octave</string>
    <string name="saveScale">Save Temperament</string>
    <string name="strobeColour">Strobe Colour</string>            
    <string name="micInput">Use Headet Mic?</string>            
    
</resources>
